--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    background-image: url(/images/bg-1.jpg);
+    background-image: url(/bg-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
